--- a/public/.htaccess
+++ b/public/.htaccess
@@ -18,4 +18,10 @@
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteRule ^ index.php [L]
+	
+	
+	 <FilesMatch "\.(htaccess|htpasswd|ini|log|sh|inc|bak|env)$">
+        Order Allow,Deny
+        Deny from all
+    </FilesMatch>
 </IfModule>
